finishing the to do list project

--- a/index2.html
+++ b/index2.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style2.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <button class="button" onclick="
+    toggle(this);
+    ">Music</button>
+    <button class="button" onclick="
+    toggle(this);
+    ">Gaming</button>
+   
+    <button class="button" onclick="
+    toggle(this);
+    ">Tech</button>
+
+    <br><br>about an array and loop <br><br>
+
+ <script src="script2.js"></script>   
 </body>
 </html>
