end of basic learning practice

--- a/Testing Lesson/index2.html
+++ b/Testing Lesson/index2.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style2.css">
     <title>Document</title>
 </head>
-<body>
+<body style="height: 3000px;">
     <button class="button" onclick="
     toggle(this);
     ">Music</button>
@@ -18,8 +18,19 @@
     toggle(this);
     ">Tech</button>
 
-    <br><br>about an array and loop <br><br>
+    <br><br>Advance Functions <br><br><br>
 
- <script src="script2.js"></script>   
+    <button class="example-button" onclick="
+    startFinish();
+    
+    ">Start</button>
+    <button class="add-button" onclick="
+    addCart();
+    ">Add</button>
+    <p class="display"></p>
+
+    <button class="js-play-button">Play</button>
+
+ <script src="script2.js" ></script>   
 </body>
 </html>
