--- a/Small Projects/todoList.html
+++ b/Small Projects/todoList.html
@@ -47,9 +47,7 @@
     <div class="input-grid"> 
       <input type="text" class="todo-input" placeholder="Todo name">
       <input type="date" class="input-date">
-      <button onclick="
-        todo();
-        " class="add-button">Add</button>
+      <button  class="add-button">Add</button>
     </div>
     
     <div class="display"></div>
